# Draftpaper_loop

./: .coveragerc  .gitignore  COMMERCIAL_LICENSE.md  COMPLIANCE.md  Draftpaper_loop_code_audit_report.md  LICENSE  MANIFEST.in  NOTICE  README.md  README.zh-CN.md  TRADEMARK.md  pyproject.toml
.github/workflows/: plugin-contribution-preflight.yml  tag-build-verify.yml  tests.yml
codex_skills/draftpaper-workflow/: SKILL.md  contract.json
codex_skills/draftpaper-workflow/agents/: openai.yaml
codex_skills/draftpaper-workflow/references/: commands.md
docs/: DPL_SCHEMA.md  FORENSIC_FINGERPRINTING.md  capability_truth_matrix.json  cli_reference.md  cli_workflow_priority_guide.md  command_risk_matrix.md  commercial_overview.md  commercial_overview.zh-CN.md  install_profiles.md  install_profiles.zh-CN.md  manuscript_completion.md  manuscript_completion.zh-CN.md  release_process.md  release_process.zh-CN.md  token_cost_reporting.md  token_cost_reporting.zh-CN.md  windows_global_install_guide.md  windows_global_install_guide.zh-CN.md
docs/archive/: project_reference.v0316.md  project_reference.v0316.zh-CN.md
docs/audits/: 2026-07-12-astronomy-v0230-full-run.md  2026-07-12-draftpaper-loop-architecture-audit.md  2026-07-13-v0240-release-readiness.md  2026-07-14-v0260-acceptance-report.md  2026-07-17-draftpaper-loop-full-code-audit.md  2026-07-18-v0301-release-reconciliation.md  2026-07-18-v0320-completion-audit.md  2026-07-18-v0320-sandbox-container-evaluation.md  v025_issue_ledger.json
docs/discipline_modules/: README.md  codex_authoring_guide.md  module_contract.md
docs/spec/: dpl-identifiers.md
docs/superpowers/plans/: 2026-06-23-pluggable-data-acquisition.md  2026-06-24-stage-owned-discipline-methods.md  2026-07-09-v018-evidence-semantics.md  2026-07-11-capability-driven-plugin-loop.md  2026-07-11-project-local-capability-audit.md  2026-07-11-v021-manuscript-quality-parity.md  2026-07-12-manuscript-quality-architecture.md  2026-07-13-draftpaper-loop-full-process-optimization.md  2026-07-13-v025-mcp-workflow-final-optimization.md  2026-07-14-v026-project-workspace-statistics-figure-workflow.md  2026-07-16-euclid-desi-to-general-workflow-optimization.md  2026-07-18-draftpaper-loop-integrated-completion-and-code-audit-optimization.md  2026-07-19-readme-capability-clarity-and-author-completion-boundary.md
docs/superpowers/specs/: 2026-06-23-pluggable-data-acquisition-design.md
docs/support/: index.html  support.css  support.js
draftpaper_cli/: __init__.py  analysis_code.py  analysis_revision.py  artifact_dag.py  artifact_repository.py  bibliography.py  blind_quality.py  capability_packs.py  change_impact.py  citation_audit.py  citation_repair.py  citation_utils.py  claim_contract.py  cli.py  cli_compat.py  cli_output.py  code_ownership.py  cohort_semantics.py  command_contracts.py  command_registry.py  command_transaction.py  completion_change_classifier.py  core_evidence.py  data_acquisition.py  data_contracts.py  data_feasibility.py  discipline.py  discipline_review_compiler.py  discussion.py  doctor.py  eval_runtime.py  evidence_registry.py  evidence_resolver.py  evidence_snapshot.py  executable_analysis.py  execution_policy.py  failure_router.py  figure_contract_gate.py  figure_contracts.py  figure_contracts_v026.py  (+106 more)
draftpaper_cli/_vendor/: __init__.py
draftpaper_cli/_vendor/paper_fetch_skill/: LICENSE  __init__.py
draftpaper_cli/capability_packs/astronomy_time_domain_ml/: manifest.json  routing_eval.jsonl
draftpaper_cli/discipline_modules/: __init__.py  base.py  local_plugin_runtime.py  manifest_runtime.py  registry.py
draftpaper_cli/extensions/: __init__.py  contracts.py  dispatcher.py  events.py  host_capabilities.py  registry.py  scoped_artifact_reader.py  status_projection.py
draftpaper_cli/mcp/: __init__.py  server.py  service.py
draftpaper_cli/methods/: __init__.py  common.py  formulas.py  verification.py  writer.py
draftpaper_cli/plotting/: __init__.py  scientific_svg.py
draftpaper_cli/plugin_candidates/: __init__.py  common.py  contribution.py  extractors.py  promotion.py  skill_source.py
draftpaper_cli/release_fixtures/: __init__.py  astronomy_ml.json  bioinformatics_medicine.json  geography_ml.json  physics_quantum.json  scientific_image_ml.json
draftpaper_cli/resources/: extension_host_capabilities.json  release_manifest.json  runnable_plugin_profiles.json
draftpaper_cli/review_engines/: __init__.py  astronomy.py  base.py  biology.py  default.py  engineering.py  finance.py  geography.py  machine_learning.py  medicine.py
github_submit/: README.md  README.zh-CN.md
requirements/: ci-constraints.txt
scripts/: scaffold_builtin_foundation_plugins.py
tests/: __init__.py  helpers.py  test_analysis_code_generation.py  test_analysis_revision.py  test_artifact_dag.py  test_artifact_drift.py  test_astronomy_plugins.py  test_astronomy_remote_stream_plugin.py  test_bibliography_contract.py  test_blind_quality.py  test_capability_truth_matrix.py  test_change_impact.py  test_citation_audit_repair.py  test_cli_feasibility_commands.py  test_codex_skill_wrapper.py  test_cohort_semantics.py  test_command_contracts_v029.py  test_common_utils.py  test_composite_discipline_modules.py  test_cross_discipline_capability_regression.py  test_data_acquisition.py  test_data_contracts.py  test_data_feasibility.py  test_deep_learning_plugins.py  test_discipline_modules.py  test_discussion.py  test_doctor_and_command_contract.py  test_dpl_contract.py  test_eval_runtime.py  test_evidence_first_pipeline.py  test_evidence_registry.py  test_evidence_resolver_v0233.py  test_evidence_snapshot.py  test_executable_analysis.py  test_extension_host.py  test_failure_router.py  test_figure_contract_gate.py  test_figure_contracts.py  test_figure_plugin_trace.py  test_figure_semantic_annotations.py  (+108 more)
tests/fixtures/: completion_change_calibration.json
tools/: generate_cli_reference.py  generate_product_docs.py  scan_secrets.py  validate_capability_truth_matrix.py  verify_install_matrix.py  verify_release_tag.py  verify_wheel_install.py
(+1269 files in other folders)
