[project]
name = "draftpaper-cli"
version = "0.18.5"
description = "Local-first staged CLI workflow for research paper projects."
readme = "docs/cli_workflow_priority_guide.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "xiejhhhhhh", email = "xiejinhui22@mails.ucas.ac.cn" }
]
keywords = ["research", "latex", "paper-writing", "cli", "codex-skills"]
dependencies = [
  "matplotlib>=3.8",
  "SciencePlots>=2.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "seaborn>=0.13",
]

[project.optional-dependencies]
plotting = [
  "numpy",
  "pandas",
  "matplotlib",
  "SciencePlots",
  "scipy",
  "seaborn",
  "scikit-learn",
]
plotting-full = [
  "numpy",
  "pandas",
  "matplotlib",
  "SciencePlots",
  "scipy",
  "seaborn",
  "scikit-learn",
  "marsilea",
  "reportlab",
  "scikit-plot",
]
fulltext = [
  "beautifulsoup4",
  "cachetools",
  "filelock",
  "filetype",
  "idutils",
  "lxml",
  "platformdirs",
  "pydantic",
  "PyMuPDF",
  "python-dotenv",
  "rapidfuzz",
  "trafilatura",
  "urllib3",
]
dev = [
  "pytest>=8",
]

[project.scripts]
draftpaper = "draftpaper_cli.cli:main"

[tool.setuptools.packages.find]
include = ["draftpaper_cli*"]
exclude = ["codex_skills*", "third_party*", "tests*"]

[tool.setuptools.package-data]
"draftpaper_cli._vendor.paper_fetch_skill" = ["LICENSE"]
"draftpaper_cli._vendor.paper_fetch_skill.paper_fetch.resources.arxiv" = ["*.json"]
"draftpaper_cli._vendor.paper_fetch_skill.paper_fetch.resources.formula" = ["*.json", "*.mjs"]
"draftpaper_cli._vendor.paper_fetch_skill.paper_fetch.models" = ["*.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
