[project]
name = "draftpaper-cli"
version = "0.25.0"
description = "Local-first staged CLI workflow for research paper projects."
readme = "docs/cli_workflow_priority_guide.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "xiejhhhhhh", email = "xiejinhui22@mails.ucas.ac.cn" }
]
keywords = ["research", "latex", "paper-writing", "cli", "codex-skills"]
dependencies = [
  "matplotlib>=3.8",
  "Pillow>=10",
  "SciencePlots>=2.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "bibtexparser>=1.4",
  "pypdf>=4",
  "seaborn>=0.13",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.10",
  "pydantic>=2.7",
]
plotting = [
  "numpy",
  "pandas",
  "matplotlib",
  "SciencePlots",
  "scipy",
  "seaborn",
  "scikit-learn",
]
plotting-full = [
  "numpy",
  "pandas",
  "matplotlib",
  "SciencePlots",
  "scipy",
  "seaborn",
  "scikit-learn",
  "marsilea",
  "reportlab",
  "scikit-plot",
]
fulltext = [
  "beautifulsoup4",
  "cachetools",
  "filelock",
  "filetype",
  "idutils",
  "lxml",
  "platformdirs",
  "pydantic",
  "PyMuPDF",
  "python-dotenv",
  "rapidfuzz",
  "trafilatura",
  "urllib3",
]
dev = [
  "pytest>=8",
]

[project.scripts]
draftpaper = "draftpaper_cli.cli:main"

[tool.setuptools.packages.find]
include = ["draftpaper_cli*"]
exclude = ["codex_skills*", "third_party*", "tests*"]

[tool.setuptools.package-data]
"draftpaper_cli.discipline_modules" = ["**/*.json", "**/*.csv", "**/*.md"]
"draftpaper_cli" = ["capability_packs/**/*.json", "capability_packs/**/*.jsonl", "resources/**/*.md", "resources/**/*.json"]
"draftpaper_cli.release_fixtures" = ["*.json"]
"draftpaper_cli._vendor.paper_fetch_skill" = ["LICENSE"]
"draftpaper_cli._vendor.paper_fetch_skill.paper_fetch.resources.arxiv" = ["*.json"]
"draftpaper_cli._vendor.paper_fetch_skill.paper_fetch.resources.formula" = ["*.json", "*.mjs"]
"draftpaper_cli._vendor.paper_fetch_skill.paper_fetch.models" = ["*.pyi"]

[tool.setuptools.data-files]
"share/draftpaper-cli" = ["third_party/registry.json", "third_party/THIRD_PARTY_NOTICES.md"]
"share/draftpaper-cli/licenses/paper-fetch-skill" = ["third_party/paper-fetch-skill/LICENSE"]
"share/draftpaper-cli/licenses/academicforge" = ["third_party/academicforge/LICENSE.snapshot"]
"share/draftpaper-cli/licenses/gbrain" = ["third_party/gbrain/LICENSE.snapshot"]
"share/draftpaper-cli/licenses/upstream-skills/k-dense-ai__scientific-agent-skills" = ["third_party/upstream-skills/k-dense-ai__scientific-agent-skills/LICENSE.snapshot"]
"share/draftpaper-cli/licenses/upstream-skills/orchestra-research__ai-research-skills" = ["third_party/upstream-skills/orchestra-research__ai-research-skills/LICENSE.snapshot"]
"share/draftpaper-cli/licenses/upstream-skills/obra__superpowers" = ["third_party/upstream-skills/obra__superpowers/LICENSE.snapshot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
